add file + config db

--- a/HRMCMS/src/main/resources/application.properties
+++ b/HRMCMS/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=HRMCMS
+spring.datasource.driverClassName = com.mysql.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/hrm_system?autoreconnect=true
+spring.datasource.username = root
+spring.datasource.password = 123456789
