--- a/HRMCMS/src/main/resources/application.properties
+++ b/HRMCMS/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=HRMCMS
+mybatis.config-location=classpath:mybatis/mybatis-config.xml
+mybatis.mapper-locations=classpath:mybatis/mappers/*.xml
+spring.datasource.url = jdbc:mysql://localhost:3306/test?useSSL=false
+spring.datasource.username = [DB_USER]
+spring.datasource.password = [DB_PaSSWORD]
